src/objects/Instant_Surveys__c.object
<CustomObject>
    <fields>
        <fullName>X2015_CES_Number__c</fullName>
        <formula>case(X2015_CES__c ,&quot;0&quot;,0,&quot;1&quot;,1,&quot;2&quot;,2,&quot;3&quot;,3,&quot;4&quot;,4,&quot;5&quot;,5,&quot;6&quot;,6,&quot;7&quot;,7,&quot;8&quot;,8,&quot;9&quot;,9,&quot;10&quot;,10,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2015 CES Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_CES__c</fullName>
        <label>2015 CES</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2015_CSR_Quality__c</fullName>
        <label>2015 CSR Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2015_CSR_Quality_number__c</fullName>
        <formula>case(X2015_CSR_Quality__c,&quot;0&quot;,0,&quot;1&quot;,0.1,&quot;2&quot;,0.2,&quot;3&quot;,0.3,&quot;4&quot;,0.4,&quot;5&quot;,0.5,&quot;6&quot;,0.6,&quot;7&quot;,0.7,&quot;8&quot;,0.8,&quot;9&quot;,0.9,&quot;10&quot;,1,
case(CX_Quality_of_CSR__c,&quot;Very Satisfied&quot;,1,&quot;Somewhat Satisfied&quot;,0.67,&quot;Very Dissatisfied&quot;,0,&quot;Somewhat Dissatisfied&quot;,0.34,-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2015 CSR Quality number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_Communication_Satisfaction__c</fullName>
        <label>2015 Communication Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2015_Communication_Satisfaction_number__c</fullName>
        <formula>case(X2015_Communication_Satisfaction__c,&quot;0&quot;,0,&quot;1&quot;,1,&quot;2&quot;,2,&quot;3&quot;,3,&quot;4&quot;,4,&quot;5&quot;,5,&quot;6&quot;,6,&quot;7&quot;,7,&quot;8&quot;,8,&quot;9&quot;,9,&quot;10&quot;,10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2015 Communication Satisfaction number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_Email__c</fullName>
        <label>2015 Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2015_First_Name__c</fullName>
        <label>2015 First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2015_Improve_Documentation_quality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2015 Improve Documentation quality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2015_Improve_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2015 Improve Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2015_Improve_Phone_availability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2015 Improve Phone availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2015_Improve_Portal_usability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2015 Improve Portal usability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2015_Improve_Rep_T_D__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2015 Improve Rep T&amp;D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2015_Last_Name__c</fullName>
        <label>2015 Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2015_Other_Specify__c</fullName>
        <label>2015 Other Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2015_Overall_Satisfaction__c</fullName>
        <label>2015 Overall Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2015_Overall_Satisfaction_number__c</fullName>
        <formula>case( X2015_Overall_Satisfaction__c  ,&quot;0&quot;,0,&quot;1&quot;,1,&quot;2&quot;,2,&quot;3&quot;,3,&quot;4&quot;,4,&quot;5&quot;,5,&quot;6&quot;,6,&quot;7&quot;,7,&quot;8&quot;,8,&quot;9&quot;,9,&quot;10&quot;,10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2015 Overall Satisfaction number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_Phone_Number__c</fullName>
        <label>2015 Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2015_Speed_Satisfaction__c</fullName>
        <label>2015 Speed Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2015_Speed_Satisfaction_number__c</fullName>
        <formula>case( X2015_Speed_Satisfaction__c ,&quot;0&quot;,0,&quot;1&quot;,1,&quot;2&quot;,2,&quot;3&quot;,3,&quot;4&quot;,4,&quot;5&quot;,5,&quot;6&quot;,6,&quot;7&quot;,7,&quot;8&quot;,8,&quot;9&quot;,9,&quot;10&quot;,10, 0)/10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2015 Speed Satisfaction number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Instant Survey</label>
    <nameField>
        <label>Instant Surveys Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instant Surveys</pluralLabel>
    <recordTypes>
        <fullName>Espiritu_IS_Record_Type</fullName>
        <active>true</active>
        <label>Espiritu IS Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live_Agent_Chat</fullName>
        <active>true</active>
        <label>Live Agent Chat</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF_ACR_Survey</fullName>
        <active>true</active>
        <description>Salesforce ACR surveys</description>
        <label>SF ACR Survey</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>